--- a/package.ini
+++ b/package.ini
@@ -1,6 +1,6 @@
-Name = "Dracula Theme"
+Name = "Darcula Theme"
 Type = "Style"
 Author = Hink <admin@hink.me>
 Version = 0.1
 Platforms   = win32, win64
-Description = ""
+Description = "A theme based on JetBrain's IntelliJ IDEA theme Darcula."
