Added all platforms for package installer, as the theme should look uniform on all platforms (theoretically).

--- a/package.ini
+++ b/package.ini
@@ -2,5 +2,5 @@ Name = "Darcula Theme"
 Type = "Style"
 Author = Hink
 Version = 0.1
-Platforms   = win32, win64
+Platforms   = win32, win64, linux_x86, linux_amd64, mac
 Description = "A theme based on JetBrain's IntelliJ IDEA theme Darcula."
