Added all package installer archive extensions to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-Addon Page Art
+# http://forum.teamspeak.com/threads/65136-TeamSpeak-3-Package-Installer?p=286469#post286469
+*.ts3_plugin
 *.ts3_style
+*.ts3_soundpack
+*.ts3_iconpack
+*.ts3_translation
 *.ts3_addon
